# trabalho-final-bd2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.sh  main.py  pipeline.sh  pyproject.toml  skills-lock.json
app/: database.py  main.py  models.py
app/routes/: benchmarks.py  events.py  nodes.py  stats.py
docker/: docker-compose.yml  init-replica-set.js
documentacao/: arquitetura.md  experimentos.md  fontes.md  modelo_dados.md  relatorio.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/components/: AppShell.jsx  BottomNav.jsx  Sidebar.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  skeleton.jsx  table.jsx  textarea.jsx
frontend/src/lib/: eventTypes.js
frontend/src/pages/: BenchmarkPage.jsx  DashboardPage.jsx  EventFormPage.jsx  EventListPage.jsx  HomePage.jsx  MapPage.jsx  NodeStatusPage.jsx
scripts/: bd2_common.py  build_benchmark_datasets.py  create_indexes.py  extract_raw_all.py  inspect_raw_data.py  load_mongo.py  normalize_events.py  run_experiments.py  run_queries.py  wait_for_mongo.py
tests/: test_api.py
